--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>26 Dec. 2011</b>
 - "Wizard Storm" should now work when fellowship moves from the site it's attached to.
 - "Courtesy of My Hall" should be able to discard a hard from it now to heal a dwarf.
+- "Old Noakes" will now trigger only for discarding cards from free player hand.
 
 <b>22 Dec. 2011</b>
 - "Valley of the Silverlode" should not correctly allow to heal every Hobbit companion.
