--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>27 Dec. 2011</b>
+- "Isengard Scout Troop" now exerts itself to take control of a site.
+
 <b>26 Dec. 2011</b>
 - "Wizard Storm" should now work when fellowship moves from the site it's attached to.
 - "Courtesy of My Hall" should be able to discard a hard from it now to heal a dwarf.
