- "Orc Assassin" and other similar cards should be working correctly now, allowing to assign allies only when allies are "on the site" (at home or allowed to participate otherwise).

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,8 @@
 <pre style="font-size:80%">
 <b>27 Dec. 2011</b>
 - "Isengard Scout Troop" now exerts itself to take control of a site.
+- "Orc Assassin" and other similar cards should be working correctly now, allowing to assign allies only when allies
+are "on the site" (at home or allowed to participate otherwise).
 
 <b>26 Dec. 2011</b>
 - "Wizard Storm" should now work when fellowship moves from the site it's attached to.
