- "Till Durin Wakes Again" now allows to heal as many dwarves as you want, rather than just one.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>29 Dec. 2011</b>
+- "Till Durin Wakes Again" now allows to heal as many dwarves as you want, rather than just one.
+
 <b>27 Dec. 2011</b>
 - "Isengard Scout Troop" now exerts itself to take control of a site.
 - "Orc Assassin" and other similar cards should be working correctly now, allowing to assign allies only when allies
