--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - "Till Durin Wakes Again" now allows to heal as many dwarves as you want, rather than just one.
 - "All Thought Bent on It" now makes the FP player to exert the characters, rather than the Shadow player.
 - "Fifth Level" can now be transferred between minions.
+- "Neekerbreekers' Bog" no longer freezes the game, when moving to the site during regroup when minion is in play.
 
 <b>27 Dec. 2011</b>
 - "Isengard Scout Troop" now exerts itself to take control of a site.
