--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>1 Jan. 2012</b>
+- "Southron Archer Legion" should now use the +4 limit for the entire phase.
+
 <b>29 Dec. 2011</b>
 - "Till Durin Wakes Again" now allows to heal as many dwarves as you want, rather than just one.
 - "All Thought Bent on It" now makes the FP player to exert the characters, rather than the Shadow player.
