--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>1 Jan. 2012</b>
 - "Southron Archer Legion" should now use the +4 limit for the entire phase.
+- "Return to Its Master" should now correctly negate Ring text for the duration of the extra skirmish.
 
 <b>29 Dec. 2011</b>
 - "Till Durin Wakes Again" now allows to heal as many dwarves as you want, rather than just one.
