--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - "Southron Archer Legion" should now use the +4 limit for the entire phase.
 - "Return to Its Master" should now correctly negate Ring text for the duration of the extra skirmish.
 - "Fear" should now exert your Nazgul.
+- "Make Light of Burdens" should not be able to discard any condition anymore.
 
 <b>29 Dec. 2011</b>
 - "Till Durin Wakes Again" now allows to heal as many dwarves as you want, rather than just one.
