--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>2 Jan. 2012</b>
+- "Banner of Westernesse" now no longer allows you to heal the companion that won the skirmish.
+
 <b>1 Jan. 2012</b>
 - "Southron Archer Legion" should now use the +4 limit for the entire phase.
 - "Return to Its Master" should now correctly negate Ring text for the duration of the extra skirmish.
