--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>2 Jan. 2012</b>
 - "Banner of Westernesse" now no longer allows you to heal the companion that won the skirmish.
 - "Let Her Deal With Them" can now be played from discard only during Shadow phase.
+- "Sindri" allows to play the stacked events only during Skirmish now.
 
 <b>1 Jan. 2012</b>
 - "Southron Archer Legion" should now use the +4 limit for the entire phase.
