- "Ellesar's Edict" should now correctly discard the Wraith.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>4 Jan. 2012</b>
+- "Ellesar's Edict" should now correctly discard the Wraith.
+
 <b>2 Jan. 2012</b>
 - "Banner of Westernesse" now no longer allows you to heal the companion that won the skirmish.
 - "Let Her Deal With Them" can now be played from discard only during Shadow phase.
