- "Uruk Warrior" now correctly can use it's ability in Maneuver phase, rather than in Shadow phase.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>6 Jan. 2012</b>
+- "Uruk Warrior" now correctly can use it's ability in Maneuver phase, rather than in Shadow phase.
+
 <b>4 Jan. 2012</b>
 - "Ellesar's Edict" should now correctly discard the Wraith.
 
