--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>8 Jan. 2012</b>
+- Player owned cards can now be used in casual games, in addition to the normal ones.
+
 <b>7 Jan. 2012</b>
 - "Damrod" now correctly checks his spot play condition.
 - "Cave Troll's Hammer" from Black Rider now is of ORC culture, not MORIA.
