--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>10 Jan. 2012</b>
 - "Alcarin" should now correctly be usable only if his cost (assignment) can be payed.
+- Fixed a lot of issues with Assignment phase.
 
 <b>8 Jan. 2012</b>
 - Player owned cards can now be used in casual games, in addition to the normal ones.
