--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>10 Jan. 2012</b>
 - "Alcarin" should now correctly be usable only if his cost (assignment) can be payed.
 - Fixed a lot of issues with Assignment phase.
+- "The Palanthir of Orthanc" is only usable when it can spot ISENGARD minion now.
 
 <b>8 Jan. 2012</b>
 - Player owned cards can now be used in casual games, in addition to the normal ones.
