- "Isengard Sword" now correctly gives -2 Strength to character in skirmish against its bearer.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>11 Jan. 2012</b>
+- "Isengard Sword" now correctly gives -2 Strength to character in skirmish against its bearer.
+
 <b>10 Jan. 2012</b>
 - "Alcarin" should now correctly be usable only if his cost (assignment) can be payed.
 - Fixed a lot of issues with Assignment phase.
