- Players now can setup auto-pass option per phase, by default game auto-passes on all phases except for Shadow and Skirmish.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,8 @@
 <pre style="font-size:80%">
 <b>11 Jan. 2012</b>
 - "Isengard Sword" now correctly gives -2 Strength to character in skirmish against its bearer.
+- Players now can setup auto-pass option per phase, by default game auto-passes on all phases except for Shadow
+and Skirmish.
 
 <b>10 Jan. 2012</b>
 - "Alcarin" should now correctly be usable only if his cost (assignment) can be payed.
