- Players can now (using Settings tab) specify which form of answer selection to use - buttons or drop-down.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>12 Jan. 2012</b>
+- Players can now (using Settings tab) specify which form of answer selection to use - buttons or drop-down.
+
 <b>11 Jan. 2012</b>
 - "Isengard Sword" now correctly gives -2 Strength to character in skirmish against its bearer.
 - Players now can setup auto-pass option per phase, by default game auto-passes on all phases except for Shadow
