- "Blood of Numenor" now skips the archery phase.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - Players can now (using Settings tab) specify which form of answer selection to use - buttons or drop-down.
 - FP player should be able to play only FP cards, Shadow player - Shadow cards, even if effect text doesn't say it
 (i.e. "Fellowship: Play Man to draw a card.")
+- "Blood of Numenor" now skips the archery phase.
 
 <b>11 Jan. 2012</b>
 - "Isengard Sword" now correctly gives -2 Strength to character in skirmish against its bearer.
