--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>13 Jan. 2012</b>
+- "The Eye of Sauron" now correctly exerts the SAURON Orc.
+
 <b>12 Jan. 2012</b>
 - Players can now (using Settings tab) specify which form of answer selection to use - buttons or drop-down.
 - FP player should be able to play only FP cards, Shadow player - Shadow cards, even if effect text doesn't say it
