--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>14 Jan. 2012</b>
 - "Refuge" now discards companion from hand, rather than condition to heal a companion.
+- "When moves to" actions now happen before twilight for movement is added.
 
 <b>13 Jan. 2012</b>
 - "The Eye of Sauron" now correctly exerts the SAURON Orc.
