- "Hobbit Farmer" and other allies copying site text should now be able to activate the site phase actions.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>15 Jan. 2012</b>
+- "Hobbit Farmer" and other allies copying site text should now be able to activate the site phase actions. 
+
 <b>14 Jan. 2012</b>
 - "Refuge" now discards companion from hand, rather than condition to heal a companion.
 - "When moves to" actions now happen before twilight for movement is added.
