- "Easterling Banner-bearer" should have his strength correctly calculated.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>15 Jan. 2012</b>
-- "Hobbit Farmer" and other allies copying site text should now be able to activate the site phase actions. 
+- "Hobbit Farmer" and other allies copying site text should now be able to activate the site phase actions.
+- "Easterling Banner-bearer" should have his strength correctly calculated.
 
 <b>14 Jan. 2012</b>
 - "Refuge" now discards companion from hand, rather than condition to heal a companion.
