--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,5 +1,8 @@
 <pre style="font-size:80%">
 <b>15 Jan. 2012</b>
+- "Fearless" should now be giving a proper bonus to the minion.
+
+<b>15 Jan. 2012</b>
 - "Hobbit Farmer" and other allies copying site text should now be able to activate the site phase actions.
 - "Easterling Banner-bearer" should have his strength correctly calculated.
 - "Dunlending Ravager" now doesn't highlight when there is no allies to spot.
