- "Orthanc Warrior" has a propert name now.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>15 Jan. 2012</b>
 - "Fearless" should now be giving a proper bonus to the minion.
+- "Orthanc Warrior" has a propert name now.
 
 <b>15 Jan. 2012</b>
 - "Hobbit Farmer" and other allies copying site text should now be able to activate the site phase actions.
