--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>15 Jan. 2012</b>
 - "Fearless" should now be giving a proper bonus to the minion.
 - "Orthanc Warrior" has a propert name now.
+- Added "Bloodlines" (set 13) set.
 
 <b>15 Jan. 2012</b>
 - "Hobbit Farmer" and other allies copying site text should now be able to activate the site phase actions.
