Changing league rule about X and R list.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/leagueRules.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/leagueRules.html
@@ -60,7 +60,7 @@
                 playing in
                 the <b style="color:#009f9f">League</b>.
             </li>
-            <li>(SEALED) <b style="color:#009f9f">League</b> has no X or R lists, so all cards are legal.</li>
+            <li>(SEALED) <b style="color:#009f9f">League</b> has X and R list of the format it is run in.</li>
             <li>(SEALED) All the other rules of deck building - minimum 60 cards deck, even FP/Shadow cards split, etc.
                 apply.
             </li>
