- "Master Proudfoot" now gives an option of choosing which cards to put into hand, because of Rule of 4.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - "Fearless" should now be giving a proper bonus to the minion.
 - "Orthanc Warrior" has a propert name now.
 - Added "Bloodlines" (set 13) set.
+- "Master Proudfoot" now gives an option of choosing which cards to put into hand, because of Rule of 4. 
 
 <b>15 Jan. 2012</b>
 - "Hobbit Farmer" and other allies copying site text should now be able to activate the site phase actions.
