--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,11 +1,12 @@
 <pre style="font-size:80%">
 <b>16 Jan. 2012</b>
 - "Fearless" should now be giving a proper bonus to the minion.
-- "Orthanc Warrior" has a propert name now.
+- "Orthanc Warrior" has a proper name now.
 - Added "Bloodlines" (set 13) set.
 - "Master Proudfoot" now gives an option of choosing which cards to put into hand, because of Rule of 4.
 - System now correctly recognizes attribute bonus from attribute penalty and the source of the bonus/penalty is checked
 for cancelling bonus modifiers.
+- "Orc Strategist" has a proper name now.
 
 <b>15 Jan. 2012</b>
 - "Hobbit Farmer" and other allies copying site text should now be able to activate the site phase actions.
