--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -7,6 +7,7 @@
 - System now correctly recognizes attribute bonus from attribute penalty and the source of the bonus/penalty is checked
 for cancelling bonus modifiers.
 - "Orc Strategist" has a proper name now.
+- Added "Expanded Middle-earth" (set 14) set.
 
 <b>15 Jan. 2012</b>
 - "Hobbit Farmer" and other allies copying site text should now be able to activate the site phase actions.
