--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -8,6 +8,7 @@
 for cancelling bonus modifiers.
 - "Orc Strategist" has a proper name now.
 - Added "Expanded Middle-earth" (set 14) set.
+- "Sword of Rohan" now properly gives the damage +1 bonus.
 
 <b>15 Jan. 2012</b>
 - "Hobbit Farmer" and other allies copying site text should now be able to activate the site phase actions.
