- "Constantly Threatening" has a proper name now.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -10,6 +10,7 @@ for cancelling bonus modifiers.
 - Added "Expanded Middle-earth" (set 14) set.
 - "Sword of Rohan" now properly gives the damage +1 bonus.
 - "Dunlending Warrior" now can assign itself to an ally.
+- "Constantly Threatening" has a proper name now.
 
 <b>15 Jan. 2012</b>
 - "Hobbit Farmer" and other allies copying site text should now be able to activate the site phase actions.
