--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>17 Jan. 2012</b>
 - "Deagol" should be able to play an artifact or possession without freezing the game.
+- "Sam, Bearer of Great Need" may now start as a Ring-Bearer.
 
 <b>16 Jan. 2012</b>
 - "Fearless" should now be giving a proper bonus to the minion.
