- The casual games now have correct amount of cards in deck.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>18 Jan. 2012</b>
+- The casual games now have correct amount of cards in deck.
+
 <b>17 Jan. 2012</b>
 - "Deagol" should be able to play an artifact or possession without freezing the game.
 - "Sam, Bearer of Great Need" may now start as a Ring-Bearer.
