--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>18 Jan. 2012</b>
 - The casual games now have correct amount of cards in deck.
+- Conditions which become minions now have a default site number of 0.
 
 <b>17 Jan. 2012</b>
 - "Deagol" should be able to play an artifact or possession without freezing the game.
