- Added resistance to card detail information window.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>22 Jan. 2012</b>
+- Added resistance to card detail information window.
+
 <b>18 Jan. 2012</b>
 - The casual games now have correct amount of cards in deck.
 - Conditions which become minions now have a default site number of 0.
