--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,8 @@
 <pre style="font-size:80%">
 <b>22 Jan. 2012</b>
 - Added resistance to card detail information window.
+- If an effect makes you exert a character X times, and you can't find a character able to be exerted X times, you can
+choose matching character, which can exert X-1 times, and so on.
 
 <b>18 Jan. 2012</b>
 - The casual games now have correct amount of cards in deck.
