--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,8 @@
 <pre style="font-size:80%">
+<b>23 Jan. 2012</b>
+- You can't create a League table, if you played maximum number of games in league serie. You can't join a league table
+if you played maximum games in league serie, or if you played against that opponent in this league series already.
+
 <b>22 Jan. 2012</b>
 - Added resistance to card detail information window.
 - If an effect makes you exert a character X times, and you can't find a character able to be exerted X times, you can
