--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>24 Jan. 2012</b>
+- "Horse of Rohan" now requires to spot ROHAN Man.
+
 <b>23 Jan. 2012</b>
 - You can't create a League table, if you played maximum number of games in league serie. You can't join a league table
 if you played maximum games in league serie, or if you played against that opponent in this league series already.
@@ -39,7 +42,7 @@ for cancelling bonus modifiers.
 - "When moves to" actions now happen before twilight for movement is added.
 
 <b>13 Jan. 2012</b>
-- "The Eye of Sauron" now correctly exerts the SAURON Orc.
+- "The Eye of Sauron" now correctly exerts the SAURON Orc.C
 
 <b>12 Jan. 2012</b>
 - Players can now (using Settings tab) specify which form of answer selection to use - buttons or drop-down.
