- Ring-bearer can't be discarded or returned to hand.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>24 Jan. 2012</b>
 - "Horse of Rohan" now requires to spot ROHAN Man.
+- Ring-bearer can't be discarded or returned to hand.
 
 <b>23 Jan. 2012</b>
 - You can't create a League table, if you played maximum number of games in league serie. You can't join a league table
