--- a/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/trunk/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>26 Jan. 2012</b>
+- Cards that remove keyword bonuses (like "Trapped and Alone") now correctly remove the keyword bonuses.
+
 <b>24 Jan. 2012</b>
 - "Horse of Rohan" now requires to spot ROHAN Man.
 - Ring-bearer can't be discarded or returned to hand.
