- "Whip of Many Thongs" now discards only Free People cards from hand.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>29 Jan. 2012</b>
+- "Whip of Many Thongs" now discards only Free People cards from hand.
+
 <b>28 Jan. 2012</b>
 - "Watch-tower of Cirith Ungol" now allows to exert only YOUR minion.
 - "Arod" now adds the +1 resistance to bearer.
