- Stacked cards and cards in discard affect game ONLY when their side (Shadow/FP) matches their owner's current role.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>1 Feb. 2012</b>
+- Stacked cards and cards in discard affect game ONLY when their side (Shadow/FP) matches their owner's current role.
+
 <b>31 Jan. 2012</b>
 - "Sword of Minas Morgul" now correctly discards the possession born by a character skirmishing the Nazgul.
 
