- Fixed a problem, where "Horn of Helm" could be played in every phase from hand.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
-<b>1 Feb. 2012</b>
+<b>2 Feb. 2012</b>
 - "Iron Fist of the Orc" now can be activated in Regroup phase, rather than in Shadow phase.
+- Fixed a problem, where "Horn of Helm" could be played in every phase from hand.
 
 <b>1 Feb. 2012</b>
 - Stacked cards and cards in discard affect game ONLY when their side (Shadow/FP) matches their owner's current role.
