- "Úlairë Nertëa" now optionally allows to play the minion, instead of making you play. So you can choose how many minions to play.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,8 @@
 <pre style="font-size:80%">
 <b>5 Feb. 2012</b>
 - "Beyond Dark Mountains" now exerts ISENGARD minion.
+- "Úlairë Nertëa" now optionally allows to play the minion, instead of making you play. So you can choose how many
+minions to play.
 
 <b>4 Feb. 2012</b>
 - "Depths of Moria" now has a corrected name.
