--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/formatRules.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/formatRules.html
@@ -57,6 +57,17 @@
     <li>there is no X-list,</li>
     <li>R-list has two cards - <i>Orkish Smith</i> and <i>Strange-looking Men</i>,</li>
 </ul>
+<b>War of the Ring standard</b>
+<ul>
+    <li>cards from sets 04-14 are legal,</li>
+    <li>sites from Shadows block are used,</li>
+    <li>Ring-bearer skirmish CAN NOT be cancelled,</li>
+    <li>X-list contains following cards - <i>Aggression</i>, <i>Final Account</i>, <i>Galadriel, Lady Redeemed</i>,
+        <i>Legolas, Dauntless Hunter</i>, <i>Memories of Darkness</i>, <i>Mordor Fiend</i>, <i>Orkish Smith</i>,
+        <i>Steadfast Champion</i>, <i>Strange-Looking Men</i>, <i>Fortress Never Fallen</i>, <i>Get On and Get Away</i>.
+    </li>
+    <li>there is no R-list,</li>
+</ul>
 <b>Open</b>
 <ul>
     <li>cards from sets 00-19 are legal,</li>
