- "Traitor's Voice" now reduces the move limit if either one of the requirements is met, rather than both.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>8 Feb. 2012</b>
 - "Pillage of Rohan" should now correctly prevent FP player from playing Skirmish events and special abilities.
 - "Fall Back" should not discard attached cards.
+- "Traitor's Voice" now reduces the move limit if either one of the requirements is met, rather than both.
 
 <b>7 Feb. 2012</b>
 - Added sets 15 and 16.
