- "O Elbereth! Gilthoniel!" will not allow to cancel a skirmish now in formats that do not allow that.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>10 Feb. 2012</b>
+- "O Elbereth! Gilthoniel!" will not allow to cancel a skirmish now in formats that do not allow that.
+
 <b>8 Feb. 2012</b>
 - "Pillage of Rohan" should now correctly prevent FP player from playing Skirmish events and special abilities.
 - "Fall Back" should not discard attached cards.
