- "Hurried Barrows" now gives the bonus to companions only if they are mounted.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>11 Feb. 2012</b>
+- "Hurried Barrows" now gives the bonus to companions only if they are mounted.
+
 <b>10 Feb. 2012</b>
 - "O Elbereth! Gilthoniel!" will not allow to cancel a skirmish now in formats that do not allow that.
 
