- "Tower Troll" now exerts itself twice to use the activated ability.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>12 Feb. 2012</b>
+- "Tower Troll" now exerts itself twice to use the activated ability.
+
 <b>11 Feb. 2012</b>
 - "Hurried Barrows" now gives the bonus to companions only if they are mounted.
 - "Gondorian Blade" no longer gives Damage +2 if bearer is a ranger and at a river.
