- "Salt from the Shire" is no longer misspelled.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>15 Feb. 2012</b>
 - Followers are added to deck builder list of card types.
+- "Salt from the Shire" is no longer misspelled.
 
 <b>12 Feb. 2012</b>
 - "Tower Troll" now exerts itself twice to use the activated ability.
