- Followers can now be transferred between companions (i.e. on second and subsequent moves).

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>15 Feb. 2012</b>
 - Followers are added to deck builder list of card types.
 - "Salt from the Shire" is no longer misspelled.
+- Followers can now be transferred between companions (i.e. on second and subsequent moves). 
 
 <b>12 Feb. 2012</b>
 - "Tower Troll" now exerts itself twice to use the activated ability.
