- "Covetous Wisp" and "Dead Faces" now have proper stat values (strength and twilight cost).

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -5,6 +5,7 @@
 - Followers can now be transferred between companions (i.e. on second and subsequent moves).
 - Cards in discard (like "Release Them") should now consistently apply their modifiers.
 - "Tom Bombadil" is no longer misspelled.
+- "Covetous Wisp" and "Dead Faces" now have proper stat values (strength and twilight cost).
 
 <b>12 Feb. 2012</b>
 - "Tower Troll" now exerts itself twice to use the activated ability.
