- "Grimir" now can prevent the wound only in Skirmish phase.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>17 Feb. 2012</b>
+- "Grimir" now can prevent the wound only in Skirmish phase.
+
 <b>15 Feb. 2012</b>
 - Followers are added to deck builder list of card types.
 - "Salt from the Shire" is no longer misspelled.
