- "Sharp Defense" now adds +2 for each possession, instead of +1.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>22 Feb. 2012</b>
+- "Sharp Defense" now adds +2 for each possession, instead of +1.
+
 <b>17 Feb. 2012</b>
 - "Grimir" now can prevent the wound only in Skirmish phase.
 
