- "With All Possible Speed" can be played in skirmish phase only.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,6 +1,7 @@
 <pre style="font-size:80%">
 <b>3 Mar. 2012</b>
 - "The Palantir of Orthanc, Recovered Seeing Stone" should no longer discard itself.
+- "With All Possible Speed" can be played in skirmish phase only.
 
 <b>29 Feb. 2012</b>
 - "Get Off the Road!" now discards cards from Free People player's deck.
