- "Soldier's Cache" now correctly increases minion site number.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -2,6 +2,7 @@
 <b>6 Mar. 2012</b>
 - "The Board Is Set" has now the Spell keyword.
 - "East Wall of Rohan" allows to exert the companions only to FP player.
+- "Soldier's Cache" now correctly increases minion site number.
 
 <b>5 Mar. 2012</b>
 - "Discard to heal" actions now shows the card to the opponent, the same way, as in case of played events.
