- "Throne of Minas Tirith" should only trigger once now, when a minion is killed.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,7 @@
 <pre style="font-size:80%">
+<b>7 Mar. 2012</b>
+- "Throne of Minas Tirith" should only trigger once now, when a minion is killed.
+
 <b>6 Mar. 2012</b>
 - "The Board Is Set" has now the Spell keyword.
 - "East Wall of Rohan" allows to exert the companions only to FP player.
