- When a card stacks cards from discard, it does it now correctly if the number of cards in discard is exactly the same as it has to stack (if no selection is needed).

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -1,4 +1,8 @@
 <pre style="font-size:80%">
+<b>9 Mar. 2012</b>
+- When a card stacks cards from discard, it does it now correctly if the number of cards in discard is exactly the same
+as it has to stack (if no selection is needed).
+
 <b>8 Mar. 2012</b>
 - Added set 18 (Treachery & Deceit)
 - "Leaping Blaze" should now work correctly.
