- "Crown of Gondor" is now a Gondor card, not a Gollum card.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -3,6 +3,7 @@
 - When a card stacks cards from discard, it does it now correctly if the number of cards in discard is exactly the same
 as it has to stack (if no selection is needed).
 - Added set 19 (Ages End)
+- "Crown of Gondor" is now a Gondor card, not a Gollum card.
 
 <b>8 Mar. 2012</b>
 - Added set 18 (Treachery & Deceit)
