- "Flee in Terror" no longer will freeze the game.

--- a/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
+++ b/gemp-lotr/gemp-lotr-web/src/main/webapp/includes/changeLog.html
@@ -4,6 +4,7 @@
 as it has to stack (if no selection is needed).
 - Added set 19 (Ages End)
 - "Crown of Gondor" is now a Gondor card, not a Gollum card.
+- "Flee in Terror" no longer will freeze the game.
 
 <b>8 Mar. 2012</b>
 - Added set 18 (Treachery & Deceit)
